chore: Machines builds with two problems: No recipe consumption counting for vanilla alloy smelting and lack of XP readout on soul binder